# PokerHandEvaluator

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  pre-commit.yml
cpp/: .gitignore  CMakeLists.txt  Makefile  README.md
cpp/benchmark/: benchmark.cc  benchmark_omaha.cc  benchmark_plo4.cc  benchmark_plo5.cc  benchmark_plo6.cc  card_sampler.h
cpp/examples/: .gitignore  Makefile  cpp_example.cc  evaluator5_standalone_example.cc  evaluator6_standalone_example.cc  evaluator7_standalone_example.cc  omaha_example.cc  plo4_example.cc  plo5_example.cc  plo6_example.cc
cpp/include/phevaluator/: phevaluator.h
cpp/src/: .gitattributes  card_sampler.cc  evaluator6.c  evaluator6.cc  evaluator7.c  evaluator7.cc  evaluator_plo4.c  evaluator_plo4.cc  evaluator_plo5.c  evaluator_plo5.cc  evaluator_plo6.c  evaluator_plo6.cc  tables.h  tables_plo5.c
cpp/test/: evaluation.cc  evaluation5_standalone.cc  evaluation6_standalone.cc  evaluation7_standalone.cc  evaluation_omaha.cc  evaluation_plo4.cc  evaluation_plo5.cc  evaluation_plo6.cc
python/: README.md  pyproject.toml  setup.cfg
python/phevaluator/: card.py  evaluator_omaha.py  hash.py  utils.py
python/tests/: test_evalator_omaha.py
python/tests/table_tests/: test_hashtable.py  utils.py
