[metadata]
name = phevaluator
version = 0.5.3.1
description = PH Evaluator - an efficient Poker Hand Evaluator based on a Perfect Hash algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HenryRLee/PokerHandEvaluator/
author = Henry Lee
author_email = lee0906@hotmail.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
keywords = poker, texas-holdem, poker-evaluator
project_urls =
    Bug Tracker = https://github.com/HenryRLee/PokerHandEvaluator/issues
    Documentation = https://github.com/HenryRLee/PokerHandEvaluator/tree/master/Documentation
    Source = https://github.com/HenryRLee/PokerHandEvaluator/tree/master/python

[options]
packages = find:
python_requires = >=3.8, <4

[options.package_data]
phevaluator = tables/*.dat
